"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-03-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-14:
	  No source revision, corrected Makefile.am to build guile
		libraries conditionally.  


2007-03-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-13:
	  Noted major flaw in guile/C+++ interoperability in BUGS.
	  New program: 'hacchpsimguile' intended for chpsim trace analysis.
		Added: main/chpsim-guile.{cc,h}, guile/chpsim-wrap.{h,cc}
	  TODO: export more functions and operations on chpsim state.


	* HACKT-00-01-04-main-00-81-12:
	  Critical fix: hackt lexer was corrupting pointer due to improper
		pointer class assignment, which compiler SHOULD have rejected.
		Oddly, this problem manifested on g++-4.0.1, but not 3.3.
		Neither compiler caught the problem... because the only
		change was in the return type of the parse_to_AST prototype!
		This fix is only necessary relative to the recent -81-10 patch.
	  Added some debugging code to AST sources in the process.


2007-03-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-11:
	  Critical fix: globally allocated resource obj_module (libhacktwrap)
		won't necessarily be deallocated in time due to
		guile no-returning, thuse we must register a manual
		destructor using atexit(), which is the first thing called
		upon exit().  
	  This fixes memory leak false-alert in guile test cases.


	* HACKT-00-01-04-main-00-81-10:
	  Now use count_ptr instead of excl_ptr for all main_funcs, 
		so we can use reference-count tracking while loading
		dynamic shared libraries, and ensure proper lifetime.
	  Moved guile-related files to guile/ directory, some files
		were renamed, losing some early revision history...
	  Split off new guile/scm_reference.{h,cc} for the
		meta_reference_union* SMOB.  