@@ -1,6 +1,6 @@
 # "Make.test-chpsim"
 #	vi: ft=automake
-#	$Id: Make.test-chpsim,v 1.3 2007/02/05 06:40:00 fang Exp $
+#	$Id: Make.test-chpsim,v 1.4 2007/03/20 02:24:19 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -400,6 +400,7 @@ clean-chpsimtests:
 	-$(RM_PATTERN) "*.chpsimckpt-indump"
 	-$(RM_PATTERN) "*.chpsimckpt-diff"
 	-$(RM_PATTERN) "*.chpsimckpttest"
+	-$(RM_PATTERN) "*.chpsimtrace"
 
 clean-local: clean-chpsimtests
 
