@@ -1,0 +1,36 @@
+Trace file contents: 1 epochs.
+		start	file	chunk
+	epoch	time	offset	size
+	0	0	0	339
+Epoch 0:
+	event		event	cause
+	index	time	node	index
+	0	0	0	0
+	1	10	1	0
+	2	10	2	0
+	3	10	8	0
+	4	20	6	3
+	5	20	7	3
+	6	30	1	4
+	7	30	2	5
+	8	30	5	5
+	9	40	4	8
+bool state trace:
+	event	global	raw
+	index	index	value
+	4	1	1
+int state trace:
+	event	global	raw
+	index	index	value
+	5	1	17
+enum state trace:
+channel state trace:
+	event	global	raw
+	index	index	value
+	1	1	1, 
+	2	2	17, 
+	4	1	[ack]
+	5	2	[ack]
+	6	1	1, 
+	7	2	17, 
+	9	3	1, 17, 
