@@ -1,5 +1,5 @@
 # "channel-sync-desync-a-04-trace.chpsimrc"
-#	$Id: channel-sync-desync-a-04-trace.chpsimrc,v 1.2 2007/02/05 06:40:18 fang Exp $
+#	$Id: channel-sync-desync-a-04-trace.chpsimrc,v 1.3 2007/03/20 02:24:23 fang Exp $
 # @haco@ channel-sync-desync-a.haco-a
 
 echo testing trace with one epoch before first auto-flush
@@ -10,6 +10,7 @@ trace channel-sync-desync-a-04.chpsimtrace
 step 10
 trace-close
 trace-dump channel-sync-desync-a-04.chpsimtrace
-!rm channel-sync-desync-a-04.chpsimtrace
+# we now keep around this trace as a side-effect for other tests...
+# !rm channel-sync-desync-a-04.chpsimtrace
 echo and we're done
 
