@@ -1,0 +1,9 @@
+#!hacchpsimguile -b
+!#
+;; "bool-copy-test-01.hacchpsimscm"
+;;	$Id: bool-copy-test-01.hacchpsimscm,v 1.1 2007/03/20 02:24:23 fang Exp $
+;; vi: ft=scheme
+;; @haco@ bool-copy-test.haco-a
+
+(dump-chpsim-struct)
+
