@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-03-19	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-15:
+	  Added dump-trace function to guile/chpsim-wrap.cc, 
+		including a basic test case.  
+	  Test suite added support for new hacchpsimscm script tests.  
+	  Coming soon: scheme trace interface.
+
+
 2007-03-18	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-14:
